[package]
name = "boinc-rpc"
version = "0.1.0"
authors = [
    "Artem Vorotnikov <artem@vorotnikov.me>",
]
description = "Access BOINC clients via RPC"
edition = "2018"
repository = "https://github.com/vorot93/rust-boinc-rpc"
keywords = [
    "boinc",
    "rpc",
    "api",
]
categories = [
    "api-bindings",
]
license = "Apache-2.0"

[dependencies]
tokio = { version = "0.2", features = ["dns", "io-util", "tcp"] }
treexml = "0.7"
rust-crypto = "0.2"
