[package]
name = "boinc-rpc"
version = "0.1.0"
authors = [
    "Artem Vorotnikov <artem@vorotnikov.me>",
]
description = "Access BOINC clients via RPC"
edition = "2018"
repository = "https://github.com/vorot93/rust-boinc-rpc"
keywords = [
    "boinc",
    "rpc",
    "api",
]
categories = [
    "api-bindings",
]
license = "Apache-2.0"

[dependencies]
bytes = "0.5"
encoding = "0.2"
futures = "0.3"
rust-crypto = "0.2"
tokio = { version = "0.2", features = ["dns", "sync", "tcp"] }
tokio-util = { version = "0.3", features = ["codec"] }
tower = "0.3"
tracing = "0.1"
treexml = "0.7"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }
